tests/dataset/tpc-ds/compiler/kotlin/q94.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q94.kt:104:53: error: type inference failed. Expected type mismatch: inferred type is MutableList<Int> but MutableList<Any> was expected
val result = mutableMapOf("order_count" to distinct(run {
                                                    ^
/tmp/q94.kt:130:15: error: type inference failed: Not enough information to infer parameter T in inline fun <T> mutableListOf(): MutableList<T>
Please specify it explicitly.

    var out = mutableListOf()
              ^
/tmp/q94.kt:132:14: error: unresolved reference: contains
        if (!contains(out, x)) {
             ^
